manifests/network/ingress-experimental.yaml
# Middleware
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
  namespace: experimental
spec:
  stripPrefix:
    prefixes:
      - /nothing
      - /test
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: experimental
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: "experimental-strip-prefix@kubernetescrd"
spec:
  rules:
    - http:
        paths:
          - path: /log-output-reader
            pathType: Prefix
            backend:
              service:
                name: log-output-svc
                port:
                  number: 2346
          - path: /log-output-writer
            pathType: Prefix
            backend:
              service:
                name: log-output-svc
                port:
                  number: 2347
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: ping-pong-svc
                port:
                  number: 2348
