manifests/network/ingress.yaml
# Middleware
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /todo
      - /test
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: 'default-strip-prefix@kubernetescrd'
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-todo-svc
            port:
              number: 2349
      - path: /log-output-reader
        pathType: Prefix
        backend:
          service:
            name: log-output-svc
            port:
              number: 2346
      - path: /log-output-writer
        pathType: Prefix
        backend:
          service:
            name: log-output-svc
            port:
              number: 2347
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: ping-pong-svc
            port:
              number: 2348
      - path: /todo
        pathType: Prefix
        backend:
          service:
            name: app-todo-svc
            port:
              number: 2349
